       - Removed: validation of API password using API
       - Updated: during uninstallation, the module version 2.x tables and links to the PS carriers are also correctly removed
       - Added: In the order detail it is now possible to set the dimensions of the shipment
       - Updated: New tracking URL address
       - Added: API logging
2.1.20 - Fixed: front.js - compatibility with other plugins
       - Removed: validation of API password using API
2.1.19 - Fixed: displaying the widget button and cart validation
2.1.18 - Updated: compatibility with PrestaShop 8 ensured
2.1.17 - Updated: sk "Is COD" translation update
       - Updated: improvements to the display of widget button in the cart
       - Updated: frontend JavaScript and CSS files registered in a way respecting CCC (Combine, Compress and Cache) setting
       - Fixed: proper missing order currency rate handling
       - Removed: loading currency rate from cnb.cz
       - Updated: to avoid certificate errors, https protocol has been replaced to http in WSDL and branch feed URLs
2.1.16 - Fixed: Correct loading of Packeta order list in case of paging
2.1.15 - Added: support for Packeta address validation widget in the cart with 'none', 'optional' and 'required'
         modes of operation. Validated address is saved and used in exports.
       - Fixed: correct storage of chosen pickup point's currency
       - Fixed: type error raised after SQL error in Packeta orders list
       - Updated: Widget HD library URL
2.1.14 - Fixed: treated a rare situation where the payment module cannot be instantiated
       - Fixed: functionality of Packeta widget button in KnowBand SuperCheckout when no shipping method is preselected
       - Fixed: deprecated hook backOfficeHeader replaced by displayBackOfficeHeader
       - Fixed: the proper display of Packeta orders without tracking number
2.1.13 - Updated: improved compatibility with PHP versions 7.2,7.4